--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 <body>
     <div class="container">
         <div class="inner">
+            <div class="bg"></div>
             <div class="item-wrap">
                 <div class="item-title">
-                    <h2>숫자 맞추기 게임</h2>
+                    <h2>쥬쥬공쥬의 숫자 맞추기 게임</h2>
                 </div>
 
                 <div class="item-content">
@@ -30,6 +31,7 @@
                         <div class="txt-chances">
                             <span>남은횟수: <span id="chances-area">5</span> </span>
                         </div>
+                        <span>최대숫자: 50</span>
                     </div>
 
                     <div class="item-reset">
