--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="inner">
             <div class="item-wrap">
                 <div class="item-title">
-                    <h2>쥬쥬공쥬의 숫자 맞추기 게임</h2>
+                    <h2>숫자 맞추기 게임</h2>
                 </div>
 
                 <div class="item-content">
